# checkmade

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: server.yml
app/: Cargo.toml  index.html
app/assets/sets/regular/: README.md
app/locales/: de.yml  en.yml  fr.yml
app/public/: main.js  manifest.json  style.css
app/src/: app.rs  engine.rs  event.rs  http.rs  i18n.rs  lib.rs  main.rs  server_time.rs  store.rs  ui.rs  utils.rs  ws.rs
app/src/engine/: stockfish.rs
app/src/http/: request.rs
app/src/ui/: modal.rs  state.rs  tabs.rs  widgets.rs
app/src/ui/state/: analysis.rs  arena.rs  move_history.rs  sandbox.rs  settings.rs
app/src/ui/tabs/: analysis.rs  arena.rs  changelog.rs  friends.rs  games.rs  sandbox.rs
app/src/ui/widgets/: analysis.rs  arena.rs  board.rs  connection_status.rs  friends.rs  games.rs  generic_multi_select.rs  generic_select.rs  piece_icons.rs  profile_menu.rs  sandbox.rs  session.rs  session_config.rs  session_config_data.rs  session_request_create.rs  time_control.rs  validated_input.rs  with_badge.rs
app/src/ui/widgets/arena/: move_list.rs  user.rs
app/src/ui/widgets/friends/: add.rs  bar.rs  friend.rs  incoming.rs  list.rs  outgoing.rs
app/src/ui/widgets/games/: bar.rs  create.rs  history.rs  incoming.rs  ongoing.rs  outgoing.rs
app/src/ui/widgets/settings/: bar.rs  content.rs
app/src/utils/: fmt.rs  image_cache.rs  image_source.rs  images.rs  markdown.rs
app/src/utils/images/: pieces.rs
app/src/ws/: cache.rs  fetchable.rs
core/: Cargo.toml
core/migration/: Cargo.toml
core/migration/src/: lib.rs  m20260520_150438_init_user.rs  m20260521_140248_init_friendship.rs  m20260523_090256_init_session.rs
core/src/: config.rs  data.rs  error.rs  game.rs  lib.rs  lingo.rs  types.rs
core/src/data/entity/: friendship.rs  mod.rs  prelude.rs  session.rs  session_request.rs  user.rs  user_identity.rs
core/src/data/ext/: friendship.rs  mod.rs
core/src/data/service/: friendship.rs  mod.rs  session.rs  user.rs
core/src/data/store/: friendship.rs  mod.rs  session.rs  session_request.rs  user.rs
core/src/game/: coords.rs  misc_action.rs  play_event.rs  play_move.rs  play_session.rs  session_data.rs  set.rs  visuals.rs
core/src/game/session_data/: normal.rs
core/src/messages/: client.rs  server.rs
core/src/types/: friend_code.rs  friend_info.rs  friendship_status.rs  identity_provider.rs  permissions.rs  session_id.rs  session_request.rs  session_status.rs  user_id.rs  user_info.rs
docker/: .env.dist  Dockerfile  Dockerfile.dev  docker-compose.yml  prometheus.yml
docker/grafana/dashboards/: performance.json
server/: Cargo.toml
server/src/: api.rs  config.rs  error.rs  main.rs  state.rs  websocket.rs
server/src/api/: error.rs  routes.rs
server/src/api/routes/: me.rs
server/src/api/routes/auth/: discord.rs
server/src/integrations/: discord.rs
server/src/websocket/: connection.rs  handler.rs  rate_limiter.rs  subscriptions.rs
