[workspace]
resolver = "3"
members = ["app", "core", "server"]

[workspace.package]
version = "0.1.0-alpha.3"
license = "MIT"
edition = "2024"

[workspace.dependencies]
checkmade-core = { path = "core" }
giga-chess = { git = "https://github.com/Zitronenjoghurt/giga-chess", rev = "2bd00b5feabb622c1a9ec3138312c1c859121c99" }
anyhow = "1.0.102"
bitcode = "0.6.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = "1.23.1"
