[package]
name = "checkmade-app"
version = "0.1.0"
edition = "2024"

[dependencies]
checkmade-core = { workspace = true }
anyhow = { workspace = true }
eframe = { version = "0.34.2", default-features = false, features = ["persistence"] }
egui = "0.34.2"
egui_dock = { version = "0.19.1", features = ["serde"] }
egui_extras = "0.34.2"
egui-notify = "0.22.0"
egui-phosphor = { version = "0.12.0", features = ["regular"] }
log = "0.4.29"
serde = { workspace = true }
strum = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.34.2", default-features = false, features = ["persistence", "wayland", "wgpu", "x11"] }
pollster = "0.4.0"
wgpu = { version = "29.0.3", features = ["metal", "vulkan", "dx12"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.34.2", default-features = false, features = ["glow", "persistence"] }
js-sys = "0.3.98"
wasm-bindgen = "0.2.121"
wasm-bindgen-futures = "0.4.71"
web-sys = "0.3.70"