[package]
name = "checkmade-core"
version = "0.1.0"
edition = "2024"

[features]
data = ["async-trait", "brotli", "fastrand", "futures", "migration", "nanoid", "petname", "rmp-serde", "sea-orm", "serde"]
bitcode = ["dep:bitcode", "giga-chess/bitcode"]
serde = ["dep:serde", "giga-chess/serde"]

[dependencies]
giga-chess = { workspace = true, features = ["strum"] }
migration = { path = "migration", optional = true }
async-trait = { version = "0.1.89", optional = true }
bitcode = { workspace = true, optional = true }
bitflags = "2.11.1"
brotli = { version = "8.0.2", optional = true }
fastrand = { version = "2.4.1", optional = true }
futures = { version = "0.3.32", optional = true }
nanoid = { version = "0.5.0", optional = true }
petname = { version = "3.0.0", optional = true }
rmp-serde = { version = "1.3.1", optional = true }
sea-orm = { version = "2.0.0-rc.38", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"], optional = true }
serde = { workspace = true, optional = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }